# dynamics_sim

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/dynamics/: CMakeLists.txt  box.cpp  box.hpp  object.cpp  object.hpp  rotation.cpp  rotation.h  rotation.hpp
